<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/black"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_cyWeight_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:src="@drawable/cyweight_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_centerInParent="true"
            android:text="@string/tittle_weight"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/bg_06"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <Button
                android:id="@+id/btn_end"
                android:textColor="@color/white"
                android:text="@string/btn_end"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="14dp"
                android:background="@drawable/button_bg" />

            <Button
                android:id="@+id/btn_detail"
                android:textColor="@color/white"
                android:text="@string/btn_detail"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="14dp"
                android:background="@drawable/button_bg" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/cur_weight"
                android:textColor="@color/white"
                android:textSize="22sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/ll1"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <EditText
                    android:inputType="numberDecimal"
                    android:id="@+id/tv_curr_Weight"
                    android:layout_width="130dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="50dp"
                    android:gravity="start"
                    android:text="200"
                    android:textColor="@color/white"
                    android:textSize="34sp"
                    android:textStyle="bold" />

            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_toRightOf="@+id/ll1"
                android:gravity="bottom"
                android:layout_marginTop="15dp"
                android:text="kg"
                android:textColor="@color/white"
                android:textSize="30sp" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#edf1f7"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="15dp"
                android:text="@string/carcum"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="270dp"
                android:text="浙A88S36"
                android:textSize="18sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="#dfdfdf" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="15dp"
                android:text="@string/category"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="270dp"
                android:text="成品米"
                android:textSize="18sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="#dfdfdf" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="15dp"
                android:text="@string/count"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="270dp"
                android:text="0"
                android:textSize="18sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="#dfdfdf" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="15dp"
                android:text="@string/single_count"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_singlecount"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="270dp"
                android:gravity="bottom"
                android:inputType="number"
                android:text="4"
                android:textSize="18sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="#dfdfdf" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="15dp"
                android:text="@string/averweight"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_averageWieght"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="270dp"
                android:textSize="18sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="#dfdfdf" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="15dp"
                android:text="@string/pizhong"
                android:textSize="18sp" />

            <EditText
                android:inputType="numberDecimal"
                android:id="@+id/tv_pizhong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="270dp"
                android:text="0.05"
                android:textSize="18sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="#dfdfdf" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="15dp"
                android:text="@string/averweightaure"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_averageAure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="270dp"
                android:textSize="18sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="#dfdfdf" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#edf1f7"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1"
                    android:text="@string/total_count"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/detail_num"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#dfdfdf" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@color/white">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/maozhong"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/detail_maozhong"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#dfdfdf" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1"
                    android:text="@string/chupi"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/detail_chupi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#dfdfdf" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@color/white">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/jingzhong"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/detail_jingzhong"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_single"
            android:layout_width="340dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/cyweight_btn_selector"
            android:text="@string/btn_weight"
            android:textColor="#ffffff"
            android:textSize="22sp" />

    </LinearLayout>

</LinearLayout>